# hc002

./: .env.example  .firebaserc  .gitignore  README.md  firestore.rules  firestore.rules.draft  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: seo-plan-housekit-pro.md  seo-production-checklist.md
public/: _headers  robots.txt  sitemap.xml
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: App.tsx  EditorAppView.tsx  editorCloudLoader.css
src/core/company/: orgTypes.ts
src/core/domain/: constants.ts  demoProject.ts  dimension.ts  doorGeometry.ts  editor3dContextMenuPolicy.ts  editor3dPickPayload.ts  entityCopySnapSystem.ts  floorBeamLinearStockCheck.test.ts  floorBeamLinearStockCheck.ts  floorBeamPlacementNumericPreview.ts  floorBeamPlacementPreviewApply.ts  floorBeamSplit.ts  foundation.ts  frameGklDoorAlongGeometry.ts  frameWallOpeningLayout.test.ts  frameWallOpeningLayout.ts  ids.ts  index.ts  (+112 more)
src/data/: lastOpenedProjectId.ts  projectFirestoreRepository.ts  projectFirestoreSync.ts  projectFirestoreWire.test.ts  projectPersistence.ts
src/firebase/: app.ts  authClient.ts  config.ts  storageClient.ts
src/shared/: constants.ts  dimensionStyle.ts  editableKeyboardTarget.ts  sceneCoordinateModalLock.test.ts  sceneCoordinateModalLock.ts
src/store/: projectHistory.ts  useAppStore.ts  useEditorShortcutsStore.ts  useReportsLayoutStore.ts
src/styles/: theme.css  ui-primitives.css
src/theme/: design-tokens.json
(+323 files in other folders)
