[package]
name = "sip_house_designer"
version = "0.1.0"
description = "SIP House Designer"
authors = ["SIP House Designer"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sip_house_designer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
